--- a/css/style.css
+++ b/css/style.css
@@ -186,11 +186,53 @@ nav{
 }
 
 @media screen and (min-width:576px) and (max-width:992px) {
+    .logo-title, .nav-list, .btn-primary{
+        display: none;
+    }
+    .menu{
+        display: block;
+    }
+    
     nav{
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         gap: 10px;
         align-items: center;
     }
+    .banner-container{
+        grid-template-columns: repeat(1, 1fr);
+        /* justify-items: center; */
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+   
+    #bg-color2{
+        display: block;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    #bg-color{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .banner-left{
+        max-width: 620px;
+        /* margin: 0 auto; */
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        order: 2;
+    }
+    .banner-right img{
+        max-width:500px;
+        margin-bottom: 20px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        order: 1;
+    }
+
 }
