--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,7 @@ main{
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     align-items: center;
+    margin-bottom: 30px;
     gap: 10px;
     
 }
@@ -349,12 +350,87 @@ main{
 
 
 /* footer section */
+footer{
+    background-color: rgb(1, 172, 253);
+    height: 420px;
+}
+
+.footer-conatiner{
+    display: flex;
+    height: 420px;
+    /* position: relative; */
+   justify-content: space-around;
+   align-items: center;
+    
+}
+.mini-footer-box{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.mini-footer-box h3{
+    font-size: 1.3rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+}
+.footer-box p{
+    width: 320px;
+    padding: 5px;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-top: 1.8rem;
+    line-height: 1.3rem;
+    color: rgb(255, 255, 255);
+}
+
+.footer-box-2 h3{
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+}
+.footer-box-2  li{
+    list-style: none;
+    margin: 15px 0;
+    font-size: 1rem;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+}
+.footer-box-3{
+    margin-bottom: 80px;
+    
+}
+.bed-luck{
+    font-size: 1.3rem;
+    font-weight: 700;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+
+}
+.logo-icon{
+    margin-top: 20px;
+}
 
 
 
 
+.marquee p{
+    font-size: 1.2rem;
+    font-weight: 600;
+    position: absolute;
+    text-align: center;
+    transform: translateX(100%);
+    animation: marquee 20s linear  infinite  ;
+}
 
-
+@keyframes marquee {
+    0%{
+        transform: translateX(100%);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
+}
 
 
 
@@ -447,6 +523,37 @@ main{
         align-items: center;
         padding: 10px;
     }
+    footer{
+        background-color: rgb(1, 172, 253);
+        height: 530px;
+    }
+    .footer-conatiner{
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+        height: 530px;
+        /* position: relative; */
+       justify-content: flex-start;
+       /* align-items: center; */
+        
+    }
+    .footer-box p{
+        margin-bottom: 15px;
+    }
+    .footer-box-2{
+        margin-left: -180px;
+       
+    }
+    .footer-box-3{
+        margin-left: -180px;
+        margin-top: 20px;
+    }
+    .footer-box h3{
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: rgb(255, 255, 255);
+        justify-content: flex-start;
+    }
 
 
 }
@@ -454,6 +561,10 @@ main{
 @media screen and (min-width:576px) and (max-width:992px) {
     .logo-title, .nav-list, .btn-primary{
         display: none;
+    }
+    nav{
+        border-bottom: 2px solid rgb(254, 163, 1);
+        
     }
     .menu{
         display: block;
@@ -524,16 +635,16 @@ main{
        max-width:600px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        justify-items: center;
-        align-items:center;
+        /* justify-items: center;
+        align-items:center; */
         gap:5px;
     }
     .combo-double{
         background-color: rgb(255, 255, 255);
         border-radius: 9px;
-        justify-items: center;
-        align-items: center;
-        min-width: 300px;
+        /* justify-items: center;
+        align-items: center; */
+        min-width: 200px;
         /* gap: 20px; */
     }
     .combo-double img{
@@ -546,6 +657,38 @@ main{
         align-items: center;
         padding: 10px;
     }
+    footer{
+        background-color: rgb(1, 172, 253);
+        height: 530px;
+    }
+    .footer-conatiner{
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+        height: 530px;
+        /* position: relative; */
+       justify-content: flex-start;
+       /* align-items: center; */
+        
+    }
+    .footer-box p{
+        margin-bottom: 15px;
+    }
+    .footer-box-2{
+        margin-left: -180px;
+       
+    }
+    .footer-box-3{
+        margin-left: -180px;
+        margin-top: 20px;
+    }
+    .footer-box h3{
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: rgb(255, 255, 255);
+        justify-content: flex-start;
+    }
+
 
 
 }
